src/testFunctional/testData/org/intellij/xquery/parser/valid/Private.xq
declare %private variable $private := "private";

declare %private function private($private:private) {
    $private,$private:private
};

private($private)