src/testFunctional/testData/org/intellij/xquery/parser/errors/IncompleteFunctionName.xq
xquery version "3.0";

module namespace IncompleteFunctionName = "IncompleteFunctionName";

declare function IncompleteFunctionName:() {
    ()
};
